web/libraries/fractal/components/tests/filter/pass/first.twig
{{ [1, 2, 3, 4]|first }} <br>
{# outputs 1 #}

{{ { a: 1, b: 2, c: 3, d: 4 }|first }} <br>
{# outputs 1 #}

{{ '1234'|first }}
{# outputs 1 #}
