web/libraries/fractal/components/tests/filter/fail/map.twig
{% set people = [
  {
    first: 'Bob',
    last: 'Smith'
  },
  {
    first: 'Alice',
    last: 'Dupond'
  },
] %}

{{ people|map(p => '#{p.first} #{p.last}')|join(', ') }}
{# outputs Bob Smith, Alice Dupond #}
